# Hotspot

./: README.md  pyproject.toml
.github/workflows/: ci.yml
hotspot/: hooks.py
hotspot/hotspot/doctype/hotspot/: hotspot.js  hotspot.json  hotspot.py  test_hotspot.py
hotspot/hotspot/doctype/hotspot_controller/: hotspot_controller.js  hotspot_controller.json  hotspot_controller.py  test_hotspot_controller.py
hotspot/hotspot/doctype/hotspot_controllers/: hotspot_controllers.js  hotspot_controllers.json  hotspot_controllers.py  test_hotspot_controllers.py
hotspot/hotspot/doctype/hotspot_table/: hotspot_table.json  hotspot_table.py
hotspot/hotspot/doctype/hotspotuser/: hotspotuser.json  hotspotuser.py
hotspot/hotspot/doctype/server_hotspot/: server_hotspot.js  server_hotspot.json  server_hotspot.py  test_server_hotspot.py
hotspot/hotspot/doctype/servers_table/: servers_table.json  servers_table.py
hotspot/hotspot/doctype/table/: table.json  table.py
hotspot/hotspot/doctype/test/: test.json  test.py
hotspot/hotspot/doctype/times_table/: times_table.json  times_table.py
hotspot/hotspot/doctype/v_table/: v_table.json  v_table.py
hotspot/hotspot/doctype/vouchers/: action_hotspot.py  print_vouchers.html  rest_api_hotspot.py  test_vouchers.py  vouchers.js  vouchers.json  vouchers.py  vouchers_list.js
hotspot/hotspot/doctype/vouchers_printer/: test_vouchers_printer.py  vouchers_printer.js  vouchers_printer.json  vouchers_printer.py  vouchers_printer_list.js
hotspot/hotspot/utils/: qr_generator.py
hotspot/www/: hassan.html
(+9 files in other folders)
